# AgentMafia

./: .gitignore  .replit  README.md  app.py  chunk_text.py  crawl_manual_docs.py  crawl_pydantic_ai_docs.py  crawl_pydantic_docs.py  crawler.py  main.py  models.py  pyproject.toml  readme.md  replit.nix  requirements.txt  settings.ini  storage.py  streamlit_crawler.py  streamlit_expert.py  test.py
StreamlineSupabase/: _modidx.py
TEST/crawler_routes/: scrape_tavily.md
TEST/storage_routes/: save_to_disk.md  test_upload.md
_agents/agent_builder/: ui_v1.py  ui_v2.py  utils.py
_agents/pydantic_expert/: pydantic_ai_expert.py  streamlit_ui.py
_agents/slack_expert/: main.py  slack_expert.py
_implementation/: crawl_manual.py  crawl_manual_docs.py  streamlit_expert.py
agent_mafia/: _modidx.py
agent_mafia/classes/: Agent_PydanticAI_Expert.py  Crawler_ProcessedChunk.py  EmbeddingLog.py  streamlit_ui.py
agent_mafia/client/: MafiaError.py  ResponseGetData.py
agent_mafia/implementations/: scrape_urls.py  streamlit_ui.py
agent_mafia/prompts/: agent.py  crawler.py
agent_mafia/routes/: api.py  crawler.py  domo.py  openai.py  pydantic.py  search.py  slack.py  storage.py  streamlit_ui.py
agent_mafia/utils/: chunk_execution.py  convert.py  files.py  (+1 more)
nbs/: chunk_execution.ipynb  index.ipynb  nbdev.yml
question_embeddings/: 2025-03-15.json
rag/: ProcessedChunk.py  __init__.py  chunk_text.py  crawler.py  prompts.py
src/: __init__.py
utils/: ExecutionCatcher.py  RagError.py  __init__.py  chunk_execution.py  chunking.py  convert.py  files.py  test_convert.ipynb
(+920 files in other folders)
